# estatejs

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
doc-site/: .gitignore  build.sh  package.json  pnpm-lock.yaml
doc-site/config/: paths.js
doc-site/docs/: pages-routing.html
doc-site/src/: .gitignore  App.js
doc-site/src/components/: CodeBlock.js  PageTitle.js  ProfileDropdown.js
doc-site/src/constants/: menu.js
doc-site/src/helpers/: firebase-helper.js
doc-site/src/hooks/: useUser.js
doc-site/src/layouts/: Footer.js  LeftSidebar.js  Topbar.js
doc-site/src/pages/: about.js  community.js  console.js  contact.js  finalize-account.js
doc-site/src/routes/: PrivateRoute.js  Routes.js  index.js
doc-site/static/: index.html
examples/chat/: README.md
examples/chat/client/: .gitignore  index.mjs  package.json
examples/chat/worker/: index.js
examples/exercise-tracker/: README.md
examples/exercise-tracker-final/worker/: cheat-sheet.txt  index.ts
examples/exercise-tracker/client/: .gitignore  package.json
examples/exercise-tracker/worker/: .gitignore  README.txt  init.ts  objects.ts  worker.json
framework/: .gitignore  README.md
framework/client/: build.sh  package-lock.json  package.json  pnpm-lock.yaml
framework/client/src/: index.ts
framework/tools/: build.sh  package-lock.json  package.json  pnpm-lock.yaml
framework/tools/src/: constants.ts  index.ts
platform/: README.md
platform/dotnet/: Jayne.sln
platform/dotnet/Jayne.AccountsEntities/: AccountEntity.cs  AccountsContext.cs  Jayne.AccountsEntities.csproj  WorkerEntity.cs  WorkerIndexEntity.cs  WorkerTypeDefinitionEntity.cs
platform/dotnet/Jayne.Common/: Assembly.cs  EnsureMinimumElementsAttribute.cs  Jayne.Common.csproj  Log.cs  NameUtil.cs  Requires.cs  SerializationBuffer.cs
platform/dotnet/Jayne.Protocol/: ArrayItemValueProto.cs  ArrayValueProto.cs  (+83 more)
platform/enum/: cpp_enum.mustache  enum_gen.py  enums.env  generate.sh  ts_enum.mustache
platform/js/: .gitignore
platform/native/: .gitignore  CMakeLists.txt  flags.cmake
platform/native/daemon/river/: CMakeLists.txt  main.cpp
platform/native/daemon/serenity/: CMakeLists.txt  main.cpp
platform/native/lib/internal/: CMakeLists.txt
platform/native/lib/internal/include/estate/internal/: buffer_pool.h  database_keys.h  env_util.h  file_util.h  flatbuffers_util.h  local_config.h  logging.h  net_util.h  pool.h  stopwatch.h  thread_pool.h  worker_authentication.h
platform/native/lib/internal/include/estate/internal/innerspace/: innerspace-client.h  innerspace.h
platform/native/lib/internal/include/estate/internal/outerspace/: outerspace-fwd.h  outerspace.h  subscription.h
platform/native/lib/internal/include/estate/internal/processor/: processor.h  service.h
platform/native/lib/internal/include/estate/internal/processor/service_provider/: buffer_pool_service_provider.h  database_service_provider.h  script_engine_service_provider.h
platform/native/lib/internal/include/estate/internal/server/: server.h  server_decl.h  server_fwd.h  v8_macro.h  v8_macro_undef.inl
platform/native/lib/internal/js/: Data-factory-imports.js.in  Data-factory.js.mustache  Service-factory-imports.js.in  Service-factory.js.mustache
platform/native/lib/internal/src/: buffer_pool.cpp  database_keys.cpp  env_util.cpp  file_util.cpp  local_config.cpp  logging.cpp  net_util.cpp  stopwatch.cpp  thread_pool.cpp  worker_authentication.cpp
platform/native/lib/internal/src/innerspace/: innerspace-client.cpp  innerspace.cpp
platform/native/lib/internal/src/outerspace/: outerspace.cpp  subscription.cpp
platform/native/lib/internal/src/processor/service_provider/: buffer_pool_service_provider.cpp  database_service_provider.cpp
platform/native/lib/internal/src/server/: server.cpp  server_rc.inl
platform/native/lib/river/: CMakeLists.txt
platform/native/lib/river/include/estate/internal/river/: handler.h  river.h
platform/native/lib/river/src/: handler.cpp  river.cpp
platform/native/lib/runtime/: CMakeLists.txt
platform/native/lib/runtime/include/estate/runtime/: .gitignore  blob.h  buffer_view.h  code.h  enum_op.h  event.h  limits.h  model_types.h  numeric_types.h  result.h  version.h
platform/native/lib/runtime/include/estate/runtime/protocol/: WorkerIndexProto_generated.h  interface_generated.h  model_generated.h  serenity_interface_generated.h  worker_process_engine_model_generated.h  worker_process_interface_generated.h
platform/native/lib/runtime/src/: code.cpp  event.cpp  model_types.cpp
platform/native/lib/serenity/: CMakeLists.txt
platform/native/lib/serenity-client/: CMakeLists.txt
platform/native/lib/serenity-client/include/: serenity-client.h
platform/native/lib/serenity-client/src/: serenity-client.cpp
platform/native/lib/serenity/include/estate/internal/serenity/: worker-process-table.h
platform/native/lib/serenity/include/estate/internal/serenity/handler/: admin.h  get_worker_process_endpoint.h  user.h
platform/native/lib/serenity/include/estate/internal/serenity/system/: launcher.h  worker-loader.h  worker-process.h
platform/native/lib/serenity/src/: worker-process-table.cpp
platform/native/lib/serenity/src/handler/: admin.cpp  get_worker_process_endpoint.cpp  user.cpp
platform/native/lib/serenity/src/system/: launcher.cpp  worker-loader.cpp  worker-process.cpp
platform/native/tests/: CMakeLists.txt  estate_test.cpp  estate_test.h  logging.cpp  logging.h  main.cpp  val_def.h
platform/native/tests/contract/: call_service_method_tests.cpp  delete_worker_tests.cpp  get_save_object_tests.cpp  innerspace_tests.cpp  setup_worker_tests.cpp
platform/native/tests/unit/: buffer_pool_tests.cpp  thread_pool_tests.cpp
platform/schema/: .gitignore  generate.sh
platform/scripts/: .all.sh  estatex  logout-worker  rider-wsl.sh  serenity-delete-pod  serenity-scale-off  serenity-scale-on  set-all-sh-executable  sl-all-local-debug  sl-all-local-release  sl-all-production-debug  sl-all-production-release  sl-all-scale-off  sl-all-scale-on  sl-all-test-debug  sl-all-test-release  sl-status  sl-watch
(+269 files in other folders)
